Update vertical-tabs.css - Fix scrollbar visible issue when having a lot of tabs
Fix scrollbar visible issue when having a lot of tabs

--- a/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
+++ b/src/browser/base/content/zen-styles/zen-tabs/vertical-tabs.css
@@ -383,4 +383,8 @@
       margin-right: 0 !important;
     }
   }
+  /* Fix scrollbar visible issue when having a lot of tabs */
+  #tabbrowser-arrowscrollbox {
+    scrollbar-width: none
+  }
 }
